--- a/repo2.html
+++ b/repo2.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h2>WELcoome to REPO222</h2>
+    <strong>I am strong</strong>
+    <small>I am small.</small>
 </body>
 </html>
